# lab

./: DEVLOG.md  README.md  pyproject.toml
examples/lang/: objects.hasty  syntax.hasty  todo.hasty  todo.proto
imperfect/: __init__.py  runtime.py  util.py
imperfect/draw/: bitblt.py  color.py  form.py  palette.py  pen.py
imperfect/haste/: proto.py  storage.py  test_proto.py
imperfect/hasty/: display.py  parse.py  scan.py  storage.py  test_display.py  thing.py  token.py
imperfect/proto/: __init__.py  listener.py  objekt.py  proto.py  scan.py  serialization.py  storage.py  test_proto.py  token.py
imperfect/runtime/: desktop.py
imperfect/tools/: doodle.py  tedit.py
imperfect/util/: __init__.py  dt.py  jsonl.py
lab/: __init__.py  doodle.py  runtime.py
lab/cmd/: tedit.py
lab/draw/: __init__.py  bitblt.py  form.py  palette.py  pen.py
lab/tedit/: __init__.py
reports/tst/: index.html
scripts/macos/: ocr.swift
testdata/image01/: Object-1.proto  Person-8sN-Cfs8o-7OFRszrsMz5.proto  Person-8sN-Cfs8o-7OFRszrsMz5.protojson  Person-UM4SvVlTPvcDvgLsmRH-3.proto  Person-UM4SvVlTPvcDvgLsmRH-3.protojson  Pet-ACwyfkLAUvRhZvGck4XSa.proto  Pet-D4jCp9ndZMg9JWzWRpIGr.proto  Pet-D4jCp9ndZMg9JWzWRpIGr.protojson
