[tool.poetry]
name = "imperfect"
version = "0.1.0"
description = "programming studies and other useless code"
authors = ["latrokles"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PySDL2 = "^0.9.16"
click = "^8.1.7"

[tool.poetry.scripts]
doodle = "imperfect.tools.doodle:main"
tedit = "imperfect.tools.tedit:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
