[tool.poetry]
name = "imperfect"
version = "0.1.0"
description = "programming studies and other useless code"
authors = ["latrokles"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PySDL2 = "^0.9.16"
click = "^8.1.7"
jinja2 = "^3.1.2"
nanoid = "^2.0.0"

[tool.poetry.scripts]
doodle = "imperfect.tools.doodle:main"
tedit = "imperfect.tools.tedit:main"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
coverage = "^7.3.2"
pytest-cov = "^4.1.0"
pytest-html = "^4.1.1"

[tool.pytest.ini_options]
addopts = "-ra -q --cov=imperfect --cov-report=term --cov-report=html:reports/cov --html=reports/tst/index.html"
pythonpath = ["."]
testpaths = ["imperfect"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
